# imageworsener

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  COPYING.txt  Makefile  Makefile.am  changelog.txt  configure.ac  imagew2008.sln  imagew2008.vcproj  libimagew2008.vcproj  readme.txt  technical.txt
scripts/: Makefile  autogen.sh  imagew2008.vcproj  imagew2019.sln  imagew2019.vcxproj  imagew2019.vcxproj.filters  imagew2022.sln  imagew2022.vcxproj  imagew2022.vcxproj.filters  libimagew2008.vcproj  libimagew2019.vcxproj  libimagew2019.vcxproj.filters  libimagew2022.vcxproj  makerelease-win.sh  makerelease.sh
src/: imagew-allfmts.c  imagew-api.c  imagew-bmp.c  imagew-cmd.c  imagew-config.h  imagew-gif.c  imagew-internals.h  imagew-jpeg.c  imagew-main.c  imagew-miff.c  imagew-opt.c  imagew-png.c  imagew-pnm.c  imagew-resize.c  imagew-tiff.c  imagew-util.c  imagew-webp.c  imagew-zlib.c  imagew.h  imagew.manifest  imagew.rc
tests/: runtest
tests/expected/: miff3.miff  miff32.miff  miff64.miff  pam1.pam  pam2.pam  pam3.pam  pnm1.ppm  pnm2.pnm  pnm3.ppm  pnm4.pnm  tiff1.tif
tests/srcimg/: g8.pgm
